[project]
name = "openedx-didkit"
dynamic = ["version"]
description = "Fork of spruceid/didkit-python with added support of Verifiable Credentials v2.0 data model. Library for Verifiable Credentials and Decentralized Identifiers."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/openedx/didkit-python"
Source = "https://github.com/openedx/didkit-python"
Issues = "https://github.com/openedx/didkit-python/issues"
Upstream = "https://github.com/spruceid/didkit-python"

[tool.poetry]
name = "openedx-didkit"
version = "0.1.0"
description = "Fork of spruceid/didkit-python with added support of Verifiable Credentials v2.0 data model. Library for Verifiable Credentials and Decentralized Identifiers."
authors = [ "Spruce Systems, Inc." ]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
maturin = "^1.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[tool.maturin]
# Include the didkit Python package
python-packages = ["didkit"]
# Put the compiled extension inside the didkit package as didkit.didkit
module-name = "didkit.didkit"
